syntax = "proto3";

package fluid.v1;

option go_package = "github.com/aspectrr/fluid.sh/proto/gen/go/fluid/v1;fluidv1";

import "fluid/v1/host.proto";
import "fluid/v1/sandbox.proto";
import "fluid/v1/source.proto";

// HostService is the bidirectional streaming service between sandbox hosts
// and the control plane. The sandbox host connects OUT to the control plane
// (NAT-friendly). Both sides exchange typed envelope messages with request_id
// for correlation.
service HostService {
  // Connect opens a bidirectional stream. The host sends a HostRegistration
  // as its first message and receives a RegistrationAck in response.
  // After registration, both sides exchange messages asynchronously.
  rpc Connect(stream HostMessage) returns (stream ControlMessage);
}

// HostMessage is the envelope for all messages sent from sandbox host to control plane.
message HostMessage {
  // request_id correlates responses to requests.
  string request_id = 1;

  oneof payload {
    // Registration and health
    HostRegistration registration = 10;
    Heartbeat heartbeat = 11;
    ResourceReport resource_report = 12;
    ErrorReport error_report = 13;

    // Sandbox lifecycle responses
    SandboxCreated sandbox_created = 20;
    SandboxDestroyed sandbox_destroyed = 21;
    SandboxStateChanged state_changed = 22;
    SandboxStarted sandbox_started = 23;
    SandboxStopped sandbox_stopped = 24;
    CommandResult command_result = 25;
    SnapshotCreated snapshot_created = 26;

    // Source VM responses
    SourceVMPrepared source_vm_prepared = 30;
    SourceCommandResult source_command_result = 31;
    SourceFileResult source_file_result = 32;
    SourceVMsList source_vms_list = 33;
    SourceVMValidation source_vm_validation = 34;
  }
}

// ControlMessage is the envelope for all messages sent from control plane to sandbox host.
message ControlMessage {
  // request_id correlates requests to responses.
  string request_id = 1;

  oneof payload {
    // Registration response
    RegistrationAck registration_ack = 10;

    // Sandbox lifecycle commands
    CreateSandboxCommand create_sandbox = 20;
    DestroySandboxCommand destroy_sandbox = 21;
    StartSandboxCommand start_sandbox = 22;
    StopSandboxCommand stop_sandbox = 23;
    RunCommandCommand run_command = 24;
    SnapshotCommand create_snapshot = 25;

    // Source VM commands
    PrepareSourceVMCommand prepare_source_vm = 30;
    RunSourceCommandCommand run_source_command = 31;
    ReadSourceFileCommand read_source_file = 32;
    ListSourceVMsCommand list_source_vms = 33;
    ValidateSourceVMCommand validate_source_vm = 34;
  }
}
